--- a/SheCodes-Project/index.html
+++ b/SheCodes-Project/index.html
@@ -16,9 +16,36 @@
     />
   </head>
   <body>
-    <div>
-      <h1>Hello World!</h1>
-      <a href="" class="btn btn-primary">Contact Me</a>
+    <div class="container">
+      <div class="weather-app">
+        <h1>Weather Site</h1>
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Partly Cloudy</li>
+        </ul>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+            alt="Partly Cloudy"
+          />
+          12°C | °F
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Percicptation: 3%</li>
+            <li>Humidity : 15%</li>
+            <li>Wind: 2 km/h</li>
+          </ul>
+        </div>
+      </div>
+      <small>
+        <a href="https://github.com/anaismveras/Weather-App" target="_blank">
+          Open Source Code, By Anais Veras
+        </a>
+      </small>
     </div>
 
     <script src="src/index.js"></script>
