Added CSS and Revised font

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -24,7 +27,6 @@
           <li>Friday 05:00</li>
           <li>Partly Cloudy</li>
         </ul>
-      </div>
       <div class="row">
         <div class="col-6">
           <img
@@ -40,12 +42,12 @@
             <li>Wind: 2 km/h</li>
           </ul>
         </div>
+        <small>
+          <a href="https://github.com/anaismveras/Weather-App" target="_blank">
+            Open Source Code, By Anais Veras
+          </a>
+        </small>
       </div>
-      <small>
-        <a href="https://github.com/anaismveras/Weather-App" target="_blank">
-          Open Source Code, By Anais Veras
-        </a>
-      </small>
     </div>
 
     <script src="src/index.js"></script>
