--- a/index.html
+++ b/index.html
@@ -13,34 +13,47 @@
       crossorigin="anonymous"
     />
     <!--Google Fonts-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-<!--CSS Link-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--CSS Link-->
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>Weather Site</h1>
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Partly Cloudy</li>
-        </ul>
-      <div class="row">
-        <div class="col-6">
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
-            alt="Partly Cloudy"
-          />
-          12°C | °F
-        </div>
-        <div class="col-6">
-          <ul>
-            <li>Percicptation: 3%</li>
-            <li>Humidity : 15%</li>
-            <li>Wind: 2 km/h</li>
-          </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overvirew">
+            <h1>Weather Site</h1>
+            <h1>New York</h1>
+            <ul>
+              <li>Friday 05:00</li>
+              <li>Partly Cloudy</li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  alt="Partly Cloudy"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong>12</strong><small>°C | °F</small>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Percicptation: 3%</li>
+                <li>Humidity : 15%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
         <small>
           <a href="https://github.com/anaismveras/Weather-App" target="_blank">
