--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1 id="currentCity"></h1>
             <ul>
               <li>Friday 05:00</li>
-              <li id="weatherDescrption">Partly Cloudy</li>
+              <li id="weatherDescription">Partly Cloudy</li>
             </ul>
           </div>
           <div class="row">
