--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
             </div>
             <div class="col-6">
               <ul>
-                <li>Percicptation: 3%</li>
-                <li>Humidity : 15%</li>
-                <li>Wind: 2 km/h</li>
+                <li>Humidity : <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> mph</li>
               </ul>
             </div>
           </div>
