Added current date

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="weather-app">
           <div class="overvirew">
             <h1>Weather Site</h1>
-            <h1 id="currentCity"></h1>
+            <h1 class="currentCityColor" id="currentCity"></h1>
             <ul>
-              <li>Friday 05:00</li>
-              <li id="weatherDescription">Partly Cloudy</li>
+              <li id="current-date-time"></li>
+              <li id="weatherDescription"></li>
             </ul>
           </div>
           <div class="row">
