updated date to "last updated" date and time

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Weather Site</h1>
             <h1 class="currentCityColor" id="currentCity"></h1>
             <ul>
-              <li id="current-date-time"></li>
+              <li>Last updated: <span id="current-date-time"></span></li>
               <li id="weatherDescription"></li>
             </ul>
           </div>
