--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div class="col-6">
               <div class="clearfix weather-temperature">
                 <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+                  src=""
+                  id="weather-icon"
                   alt="Partly Cloudy"
                   class="float-left"
                 />
