--- a/index.html
+++ b/index.html
@@ -27,8 +27,30 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
+          <form id="search-form" class="mb-4">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a City..."
+                  class="form-control"
+                  name=""
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  name=""
+                  id=""
+                  class="btn btn-info"
+                />
+              </div>
+            </div>
+          </form>
           <div class="overvirew">
-            <h1>Weather Site</h1>
             <h1 class="currentCityColor" id="currentCity"></h1>
             <ul>
               <li>Last updated: <span id="current-date-time"></span></li>
