--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                   type="search"
                   placeholder="Type a City..."
                   class="form-control"
-                  name=""
                   id="city-input"
                   autocomplete="off"
                 />
@@ -45,7 +44,7 @@
                   value="Search"
                   name=""
                   id=""
-                  class="btn btn-info"
+                  class="btn btn-info w-100"
                 />
               </div>
             </div>
