Added Degrees C to F conversion

--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
                   class="float-left"
                 />
                 <div class="float-left">
-                  <strong id="currentTemp"></strong><small>°C | °F</small>
+                  <strong id="currentTemp"></strong
+                  ><small>
+                    <a href="#" id="celsius-link">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a>
+                  </small>
                 </div>
               </div>
             </div>
