Added F to C conversion

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="float-left">
                   <strong id="currentTemp"></strong
                   ><small>
-                    <a href="#" id="celsius-link">°C</a> |
+                    <a href="#" id="celsius-link" class="active">°C</a> |
                     <a href="#" id="fahrenheit-link">°F</a>
                   </small>
                 </div>
